--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -28,9 +28,10 @@
   "ApplicationInsights": {
     "ConnectionString": ""
   },
-  "Translation":{
-    "Method": "None",
-    "AzureApiKey": ""
+  "AzureTranslation": {
+    "Endpoint": "",
+    "SubscriptionKey": "",
+    "Region": "westeurope"
   },
   "Csp": {
     "AllowScriptUrls": [
