--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -34,28 +34,38 @@
   },
   "Csp": {
     "AllowScriptUrls": [
-      "https://*.sharethis.com",
+      "https://cdn.openshareweb.com",
+      "https://cdn.openshareweb.net",
+      "https://cdn.shareaholic.net",
+      "https://partner.shareaholic.com",
       "https://*.googletagmanager.com",
       "https://*.clarity.ms",
       "https://c.bing.com"
     ],
     "AllowStyleUrls": [
-      "https://*.sharethis.com",
+      "https://cdn.openshareweb.com",
       "https://rsms.me"
     ],
-    "AllowFontUrls": ["https://rsms.me"],
+    "AllowFontUrls": [
+      "https://rsms.me",
+      "https://cdn.openshareweb.net",
+      "https://cdn.openshareweb.com"
+    ],
     "AllowFrameUrls": [
       "https://*.googletagmanager.com",
       "https://app.contentful.com"   
     ],
     "AllowImageUrls": [
-      "https://*.sharethis.com",
+      "https://cdn.openshareweb.com",
+      "https://cdn.openshareweb.net",
       "https://images.ctfassets.net",
       "https://*.googletagmanager.com",
       "https://*.google-analytics.com"
     ],
     "AllowConnectUrls": [
-      "https://*.sharethis.com",
+      "https://*.shareaholic.com",
+      "https://*.shareaholic.net",
+      "https://cdn.openshareweb.com",
       "https://*.clarity.ms",
       "https://c.bing.com",
       "https://*.googletagmanager.com",
