Added shareaholic options from config

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -17,7 +17,8 @@
   "Scripts": {
     "GTM": "GTM-M2CBTMTD",
     "Clarity": "",
-    "ShareThis": "67a9d0adc7696f001258a34a",
+    "ShareaholicSiteId": "253deae28d2ec5780832d84b7949b5cf",
+    "ShareaholicAppId": "33246672",
     "ShowCookieBanner": true
   },
   "Caching": {
