Update contentful environments in migration

--- a/.github/workflows/deploy-contentful-migrations.yml
+++ b/.github/workflows/deploy-contentful-migrations.yml
@@ -10,8 +10,9 @@ on:
         type: choice
         options:
           - development
-          - staging
+          - test
           - production
+          - e2e
 
 jobs:
   contentful:
