Updated to support Shareaholic

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -35,43 +35,43 @@
   },
   "Csp": {
     "AllowScriptUrls": [
-      "https://cdn.openshareweb.com",
-      "https://cdn.openshareweb.net",
-      "https://cdn.shareaholic.net",
-      "https://partner.shareaholic.com",
-      "https://*.googletagmanager.com",
-      "https://*.clarity.ms",
-      "https://c.bing.com"
+      "cdn.openshareweb.com",
+      "cdn.openshareweb.net",
+      "cdn.shareaholic.net",
+      "partner.shareaholic.com",
+      "*.googletagmanager.com",
+      "*.clarity.ms",
+      "c.bing.com"
     ],
     "AllowStyleUrls": [
-      "https://cdn.openshareweb.com",
-      "https://rsms.me"
+      "cdn.openshareweb.com",
+      "rsms.me"
     ],
     "AllowFontUrls": [
-      "https://rsms.me",
-      "https://cdn.openshareweb.net",
-      "https://cdn.openshareweb.com"
+      "rsms.me",
+      "cdn.openshareweb.net",
+      "cdn.openshareweb.com"
     ],
     "AllowFrameUrls": [
       "*.googletagmanager.com",
       "app.contentful.com"   
     ],
     "AllowImageUrls": [
-      "https://cdn.openshareweb.com",
-      "https://cdn.openshareweb.net",
-      "https://images.ctfassets.net",
-      "https://*.googletagmanager.com",
-      "https://*.google-analytics.com"
+      "cdn.openshareweb.com",
+      "cdn.openshareweb.net",
+      "images.ctfassets.net",
+      "*.googletagmanager.com",
+      "*.google-analytics.com"
     ],
     "AllowConnectUrls": [
-      "https://*.shareaholic.com",
-      "https://*.shareaholic.net",
-      "https://cdn.openshareweb.com",
-      "https://*.clarity.ms",
-      "https://c.bing.com",
-      "https://*.googletagmanager.com",
-      "https://*.google-analytics.com",
-      "https://*.analytics.google.com"
+      "*.shareaholic.com",
+      "*.shareaholic.net",
+      "cdn.openshareweb.com",
+      "*.clarity.ms",
+      "c.bing.com",
+      "*.googletagmanager.com",
+      "*.google-analytics.com",
+      "*.analytics.google.com"
     ]
   }
 }
