Terraform set up and PR tidy up

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -29,8 +29,8 @@
     "ConnectionString": ""
   },
   "AzureTranslation": {
-    "Endpoint": "",
-    "SubscriptionKey": "",
+    "Endpoint": "https://api.cognitive.microsofttranslator.com/",
+    "AccessKey": "",
     "Region": "westeurope"
   },
   "Csp": {
