--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -17,7 +17,8 @@
   "Scripts": {
     "GTM": "GTM-M2CBTMTD",
     "Clarity": "",
-    "ShareThis": "67a9d0adc7696f001258a34a",
+    "ShareaholicSiteId": "253deae28d2ec5780832d84b7949b5cf",
+    "ShareaholicAppId": "33246672",
     "ShowCookieBanner": true
   },
   "Caching": {
@@ -34,28 +35,38 @@
   },
   "Csp": {
     "AllowScriptUrls": [
-      "*.sharethis.com",
+      "cdn.openshareweb.com",
+      "cdn.openshareweb.net",
+      "cdn.shareaholic.net",
+      "partner.shareaholic.com",
       "*.googletagmanager.com",
       "*.clarity.ms",
       "c.bing.com"
     ],
     "AllowStyleUrls": [
-      "*.sharethis.com",
+      "cdn.openshareweb.com",
       "rsms.me"
     ],
-    "AllowFontUrls": ["rsms.me"],
+    "AllowFontUrls": [
+      "rsms.me",
+      "cdn.openshareweb.net",
+      "cdn.openshareweb.com"
+    ],
     "AllowFrameUrls": [
       "*.googletagmanager.com",
       "app.contentful.com"   
     ],
     "AllowImageUrls": [
-      "*.sharethis.com",
+      "cdn.openshareweb.com",
+      "cdn.openshareweb.net",
       "images.ctfassets.net",
       "*.googletagmanager.com",
       "*.google-analytics.com"
     ],
     "AllowConnectUrls": [
-      "*.sharethis.com",
+      "*.shareaholic.com",
+      "*.shareaholic.net",
+      "cdn.openshareweb.com",
       "*.clarity.ms",
       "c.bing.com",
       "*.googletagmanager.com",
