Add Azure Translation functionality (#74)
* Add pick a translation screen and translation services

* Run HTML through translation and cache

* Languages working on hardcoded pages

* Show english name in translation list

* Translation caching

* Change translate icon

* Re-gen snapshots

* Translation configurable

* Terraform set up and PR tidy up

* Remove translations from cache in webhook

* Enable translation in tests

* Fix failing tests

* Fix e2e tests

* Fix tests

* Fix e2e tests links

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -22,16 +22,17 @@
     "ShowCookieBanner": true
   },
   "Caching": {
-    "Type": "None",
+    "Type": "Memory",
     "ConnectionString": "",
     "Duration": "30.00:00:00"
   },
   "ApplicationInsights": {
     "ConnectionString": ""
   },
-  "Translation":{
-    "Method": "None",
-    "AzureApiKey": ""
+  "AzureTranslation": {
+    "Endpoint": "https://api.cognitive.microsofttranslator.com/",
+    "AccessKey": "",
+    "Region": "westeurope"
   },
   "Csp": {
     "AllowScriptUrls": [
