Updating to allow script hashes to be used and report only mode in csp to be turned on and off

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -41,6 +41,7 @@
       "cdn.shareaholic.net",
       "partner.shareaholic.com",
       "*.googletagmanager.com",
+      "*.google-analytics.com",
       "*.clarity.ms",
       "c.bing.com"
     ],
@@ -73,6 +74,10 @@
       "*.googletagmanager.com",
       "*.google-analytics.com",
       "*.analytics.google.com"
-    ]
+    ],
+    "AllowHashes": [
+      "sha256-xrAXrOY+vbRBqDmgZaRaAkCXcYa6i7XrdPSlOPQiY2E="
+    ],
+    "ReportOnly": false
   }
 }
