Fixed up Riddle and Status Checker

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -56,7 +56,8 @@
     ],
     "AllowFrameUrls": [
       "*.googletagmanager.com",
-      "app.contentful.com"   
+      "app.contentful.com",
+      "*.riddle.com"
     ],
     "AllowImageUrls": [
       "cdn.openshareweb.com",
