Redirection rule content type

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -11,7 +11,7 @@
     "DeliveryApiKey": "",
     "PreviewApiKey": "",
     "SpaceId": "",
-    "Environment": "e2e",
+    "Environment": "development",
     "UsePreviewApi": false
   },
   "Scripts": {
