--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -109,6 +109,7 @@ jobs:
           TF_VAR_custom_domain: ${{ vars.CUSTOM_DOMAIN }}
           TF_VAR_azure_translation_access_key: ${{ secrets.AZURE_TRANSLATION_ACCESS_KEY }}
           TF_VAR_aspnetcore_environment: ${{ github.event.inputs.environment }}
+          TF_VAR_azure_frontdoor_scale: ${{ vars.AZURE_FRONTDOOR_SCALE }}
 
       - name: 'Terraform Apply'
         id: terraform_apply
