--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -10,6 +10,7 @@
   "ContentfulOptions": {
     "DeliveryApiKey": "",
     "PreviewApiKey": "",
+    "ManagementApiKey": "",
     "SpaceId": "",
     "Environment": "development",
     "UsePreviewApi": false
