--- a/.github/workflows/generate-zap-scan.yaml
+++ b/.github/workflows/generate-zap-scan.yaml
@@ -43,8 +43,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://${{ env.FRONTDOOR_URL }}'
-          rules_file_name: 'src/rules.tsv'
-          cmd_options: '-a'
+          rules_file_name: 'src/zapscan.rules.tsv'
+          cmd_options: '-a -z "-config globalExcludeUrls=[''translate-this-page'']"'
           allow_issue_writing: 'false'
 
       - name: Commit and Push Report
