--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -44,7 +44,8 @@ jobs:
         run: docker push ghcr.io/${{ env.REPO }}:${{ github.sha }}
 
   deploy_environment:
-    name: 'Deploy Environment'
+    name: Deploy Environment
+    run-name: Deploy site to ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
     needs: [package]
     permissions:
@@ -130,6 +131,9 @@ jobs:
 
       - name: Swap slot to production
         run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
+
+      - name: Delete staging slot
+        run: az webapp deployment slot delete --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging
 
       - name: Flush Redis Cache
         if: ${{ vars.CACHING_TYPE == 'Redis' }}
