--- a/.github/workflows/generate-zap-scan.yaml
+++ b/.github/workflows/generate-zap-scan.yaml
@@ -44,7 +44,7 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://${{ env.FRONTDOOR_URL }}'
           rules_file_name: 'src/zapscan.rules.tsv'
-          cmd_options: '-a -z "-config globalExcludeUrls=[''translate-this-page'']"'
+          cmd_options: '-a -z ''-config globalexcludeurl.url_list.url.regex=".*(translate-this-page).*"'''
           allow_issue_writing: 'false'
 
       - name: Commit and Push Report
