--- a/.github/workflows/generate-zap-scan.yaml
+++ b/.github/workflows/generate-zap-scan.yaml
@@ -38,13 +38,14 @@ jobs:
           echo "FRONTDOOR_URL=$FRONTDOOR_URL" >>${GITHUB_ENV}
 
       - name: ZAP Scan
+        run-name: 'Running ZAP scan against https://${{ env.FRONTDOOR_URL }}'
         uses: zaproxy/action-full-scan@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://${{ env.FRONTDOOR_URL }}'
           rules_file_name: 'src/zapscan.rules.tsv'
-          cmd_options: '-a -z ''-config globalexcludeurl.url_list.url.regex=".*(translate-this-page).*"'''
+          cmd_options: '-a -z ''-config globalexcludeurl.url_list.url.regex=\".*(translate-this-page).*\"'''
           allow_issue_writing: 'false'
 
       - name: Commit and Push Report
