--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -12,7 +12,7 @@ on:
           - 'Test'
           - 'Staging'
           - 'Production'
-
+run-name: Deploy to ${{ github.event.inputs.environment }}
 jobs:
   package:
     name: 'Package Web in Docker'
@@ -44,8 +44,7 @@ jobs:
         run: docker push ghcr.io/${{ env.REPO }}:${{ github.sha }}
 
   deploy_environment:
-    name: Deploy Environment
-    run-name: Deploying site to ${{ github.event.inputs.environment }}
+    name: Deploying site to ${{ github.event.inputs.environment }}
     runs-on: ubuntu-latest
     needs: [package]
     permissions:
