--- a/.github/workflows/generate-zap-scan.yaml
+++ b/.github/workflows/generate-zap-scan.yaml
@@ -21,7 +21,8 @@ jobs:
     environment:
       name: ${{ github.event.inputs.environment }}
     steps:
-      - uses: actions/checkout@v4
+      - name: 'Checkout source'
+        uses: actions/checkout@v4
 
       - name: 'Az CLI login'
         uses: azure/login@v2
@@ -45,8 +46,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://${{ env.FRONTDOOR_URL }}'
-          rules_file_name: 'src/zapscan.rules.tsv'
-          cmd_options: "-a -z \"-config globalexcludeurl.url_list.url.regex='.*(translate-this-page).*'\""
+          rules_file_name: 'src/rules.tsv'
+          cmd_options: "-a -z -w report_md.md -n src/zap.context.xml"
           allow_issue_writing: 'false'
 
       - name: Commit and Push Report
