--- a/.github/workflows/generate-zap-scan.yaml
+++ b/.github/workflows/generate-zap-scan.yaml
@@ -12,6 +12,8 @@ on:
           - 'Test'
           - 'Staging'
           - 'Production'
+
+run-name: Running ZAP scan against ${{ github.event.inputs.environment }}
 jobs:
   zap_scan:
     name: 'Run Zap Scan'
@@ -19,7 +21,8 @@ jobs:
     environment:
       name: ${{ github.event.inputs.environment }}
     steps:
-      - uses: actions/checkout@v4
+      - name: 'Checkout source'
+        uses: actions/checkout@v4
 
       - name: 'Az CLI login'
         uses: azure/login@v2
@@ -37,14 +40,14 @@ jobs:
           FRONTDOOR_URL=$(az afd custom-domain list -g s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --profile-name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-fd-profile | jq -r '.[0].hostName')
           echo "FRONTDOOR_URL=$FRONTDOOR_URL" >>${GITHUB_ENV}
 
-      - name: ZAP Scan
+      - name: 'Running ZAP scan against https://${{ env.FRONTDOOR_URL }}'
         uses: zaproxy/action-full-scan@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://${{ env.FRONTDOOR_URL }}'
           rules_file_name: 'src/rules.tsv'
-          cmd_options: '-a'
+          cmd_options: "-a -z -w report_md.md -n src/zap.context.xml"
           allow_issue_writing: 'false'
 
       - name: Commit and Push Report
