--- a/src/web/CareLeavers.Web/Dockerfile
+++ b/src/web/CareLeavers.Web/Dockerfile
@@ -24,17 +24,17 @@ RUN dotnet build "CareLeavers.Web.csproj" -c "$BUILD_CONFIGURATION" -o /app/buil
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "CareLeavers.Web.csproj" -c "$BUILD_CONFIGURATION" -o /app/publish /p:UseAppHost=false
+RUN dotnet dev-certs https -ep /app/https/aspnetapp.pfx -p e2e
 
 FROM alpine:latest as security_provider
 RUN addgroup -S nonroot && adduser -S nonroot -G nonroot
-RUN dotnet dev-certs https -ep /https/aspnetapp.pfx -p e2e
 
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY --from=publish /app/https /https
 COPY --from=node /src/wwwroot/ wwwroot
 COPY --from=security_provider /etc/passwd /etc/passwd
-COPY --from=security_provider /https /https
 USER nonroot
 ENTRYPOINT ["dotnet", "CareLeavers.Web.dll"]
