--- a/.github/workflows/validate-e2e.yaml
+++ b/.github/workflows/validate-e2e.yaml
@@ -15,37 +15,8 @@ on:
       - '.github/workflows/validate-web.yaml'
 
 jobs:
-  
-  package:
-    name: 'Package E2E Docker'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./src
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Lowercase the repo name and username
-        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-
-      - name: Build Web Docker Image
-        run: |
-          docker build . -t ghcr.io/${{ env.REPO }}:e2e -f web/CareLeavers.Web/Dockerfile
-
-      - uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push Web Docker Image
-        run: docker push ghcr.io/${{ env.REPO }}:e2e
-  
   test:
+    depends-on: package
     runs-on: ubuntu-latest
     name: Run Playwright Tests
     steps:
@@ -53,16 +24,18 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          
+                
       - name: Lowercase the repo name and username
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Build Web Docker Image
+        id: build
+        working-directory: ./src
+        run: docker build . -t ghcr.io/${{ env.REPO }}:e2e -f web/CareLeavers.Web/Dockerfile
         
       - name: Run E2E Docker Image
+        id: run
+        if: steps.build.outcome == 'success'
         working-directory: ./src
         env:
           CONTENTFUL_DELIVERY_API_KEY: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
@@ -79,6 +52,7 @@ jobs:
         run: yarn playwright install --with-deps
 
       - name: Run Playwright Tests
+        if: steps.run.outcome == 'success'
         working-directory: ./src/e2e/CareLeavers.E2ETests
         run: yarn playwright test -c playwright-ci.config.ts
 
