--- a/.github/workflows/validate-e2e.yaml
+++ b/.github/workflows/validate-e2e.yaml
@@ -7,12 +7,14 @@ on:
       - 'src/web/**'
       - 'src/e2e/CareLeavers.E2ETests/**'
       - '.github/workflows/validate-web.yaml'
+      - '.github/workflows/validate-e2e.yaml'
   pull_request:
     branches: [ "main" ]
     paths:
       - 'src/web/**'
       - 'src/e2e/CareLeavers.E2ETests/**'
       - '.github/workflows/validate-web.yaml'
+      - '.github/workflows/validate-e2e.yaml'
 
 jobs:
   test:
