--- a/src/infrastructure/docker/docker-compose-ci.yml
+++ b/src/infrastructure/docker/docker-compose-ci.yml
@@ -1,7 +1,7 @@
 name: 'care-leavers'
 services:
   care-leavers-web:
-    image: ghcr.io/care-leavers-web:e2e
+    image: care-leavers-web:e2e
     ports:
       - "7050:8080"
     environment:
