--- a/src/infrastructure/docker/docker-compose-ci.yml
+++ b/src/infrastructure/docker/docker-compose-ci.yml
@@ -1,15 +1,16 @@
 name: 'care-leavers'
 services:
   care-leavers-web:
-    build:
-      context: ../../
-      dockerfile: web/CareLeavers.Web/Dockerfile
+    image: care-leavers-web:e2e
     ports:
       - "7050:8080"
     environment:
-      ASPNETCORE_ENVIRONMENT: EndToEnd
-      Caching__Type: "None"
-      ContentfulOptions__DeliveryApiKey: ${CONTENTFUL_DELIVERY_API_KEY}
-      ContentfulOptions__PreviewApiKey: ${CONTENTFUL_PREVIEW_API_KEY}
-      ContentfulOptions__SpaceId: ${CONTENTFUL_SPACE_ID}
-      ContentfulOptions__Environment: 'e2e'
+      - ASPNETCORE_ENVIRONMENT=EndToEnd
+      - Caching__Type=Memory
+      - ContentfulOptions__DeliveryApiKey=${CONTENTFUL_DELIVERY_API_KEY}
+      - ContentfulOptions__PreviewApiKey=${CONTENTFUL_PREVIEW_API_KEY}
+      - ContentfulOptions__SpaceId=${CONTENTFUL_SPACE_ID}
+      - ContentfulOptions__Environment=e2e
+      - ASPNETCORE_URLS=https://+:8080
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=e2e
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/app/aspnetapp.pfx
