--- a/src/web/CareLeavers.Web/Dockerfile
+++ b/src/web/CareLeavers.Web/Dockerfile
@@ -1,11 +1,12 @@
-﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+﻿FROM alpine:latest AS security_provider
+RUN addgroup -S nonroot && adduser -S nonroot -G nonroot
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY web/CareLeavers.Web .
 RUN dotnet publish "CareLeavers.Web.csproj" -c Release -o /app/out --sc false
-RUN dotnet dev-certs https -ep /app/out/aspnetapp.pfx -p e2e
-
-FROM alpine:latest AS security_provider
-RUN addgroup -S nonroot && adduser -S nonroot -G nonroot
+RUN mkdir /app/https
+RUN dotnet dev-certs https -ep /app/https/aspnetapp.pfx -p e2e
 
 FROM node:20 AS node
 WORKDIR /src
@@ -17,8 +18,9 @@ RUN gulp dev
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
+COPY --from=security_provider /etc/passwd /etc/passwd
 COPY --from=build /app/out .
 COPY --from=node /src/wwwroot ./wwwroot
-COPY --from=security_provider /etc/passwd /etc/passwd
 USER nonroot
+COPY --chmod=0755 --chown=nonroot --from=build /app/https .
 ENTRYPOINT ["dotnet", "CareLeavers.Web.dll"]
