--- a/src/web/CareLeavers.Web/CareLeavers.Web.csproj
+++ b/src/web/CareLeavers.Web/CareLeavers.Web.csproj
@@ -17,17 +17,19 @@
 
     <ItemGroup>
         <PackageReference Include="Azure.AI.Translation.Text" Version="1.0.0" />
+        <PackageReference Include="Azure.Core" Version="1.45.0" />
         <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
         <PackageReference Include="contentful.aspnetcore" Version="8.3.0" />
-        <PackageReference Include="HtmlAgilityPack" Version="1.12.0" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
         <PackageReference Include="Joonasw.AspNetCore.SecurityHeaders" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.15" />
+        <PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
         <PackageReference Include="OpenTelemetry.Api" Version="1.11.2" />
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.11.2" />
         <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.1" />
         <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.11.1" />
         <PackageReference Include="Serilog" Version="4.2.0" />
-        <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
         <PackageReference Include="ZiggyCreatures.FusionCache.Backplane.Memory" Version="2.1.0" />
         <PackageReference Include="ZiggyCreatures.FusionCache.Backplane.StackExchangeRedis" Version="2.1.0" />
