--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -15,6 +15,10 @@
     "Environment": "development",
     "UsePreviewApi": false
   },
+  "PdfGeneration": {
+    "ApiKey": "",
+    "Sandbox": false
+  },
   "Scripts": {
     "GTM": "GTM-M2CBTMTD",
     "Clarity": "",
