Added large translation (>50k) to use Document Translate

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -36,6 +36,7 @@
   },
   "AzureTranslation": {
     "Endpoint": "https://api.cognitive.microsofttranslator.com/",
+    "DocumentEndpoint": "",
     "AccessKey": "",
     "Region": "westeurope"
   },
