Updated to hopefully fix CSP error with GTM

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -83,7 +83,8 @@
       "*.analytics.google.com"
     ],
     "AllowHashes": [
-      "sha256-xrAXrOY+vbRBqDmgZaRaAkCXcYa6i7XrdPSlOPQiY2E="
+      "sha256-xrAXrOY+vbRBqDmgZaRaAkCXcYa6i7XrdPSlOPQiY2E=",
+      "sha256-3qhhfkh2UpoqKUJs8ZDJg7cyT9OZB06hOGHhDPVJua0="
     ],
     "ReportOnly": false
   }
