Updated to support the new GOVUK and DfE Rebrand from 25th June 2025

--- a/src/infrastructure/docker/docker-compose-ci.yml
+++ b/src/infrastructure/docker/docker-compose-ci.yml
@@ -11,6 +11,7 @@ services:
       - ContentfulOptions__PreviewApiKey=${CONTENTFUL_PREVIEW_API_KEY}
       - ContentfulOptions__SpaceId=${CONTENTFUL_SPACE_ID}
       - ContentfulOptions__Environment=e2e
+      - Rebrand=true
       - ASPNETCORE_URLS=https://+:8080
       - ASPNETCORE_Kestrel__Certificates__Default__Password=e2e
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/app/aspnetapp.pfx
