--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "UseMockedContentful": false,
+  "Rebrand": false,
   "AllowedHosts": "*",
   "ContentfulOptions": {
     "DeliveryApiKey": "",
