Updated development to always show rebrand

--- a/src/web/CareLeavers.Web/appsettings.Development.json
+++ b/src/web/CareLeavers.Web/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Rebrand": true,
   "ContentfulOptions": {
     "Environment": "development",
     "UsePreviewApi": false
