--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -11,7 +11,6 @@ on:
         options:
           - 'Test'
           - 'Staging'
-          - 'Production'
       clear-cache:
         type: choice
         description: 'Clear the cache?'
@@ -20,8 +19,11 @@ on:
         options:
           - 'True'
           - 'False'
-            
-run-name: Deploy to ${{ github.event.inputs.environment }}
+  release:
+    types: [ published ]
+
+run-name: Deploy to ${{ github.event.inputs.environment || 'Production' }}
+
 jobs:
   package:
     name: 'Package Web in Docker'
@@ -32,6 +34,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      image_tag: ${{ steps.set_tag.outputs.tag }}
 
     steps:
       - uses: actions/checkout@v4
@@ -39,9 +43,18 @@ jobs:
       - name: Lowercase the repo name and username
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
+      - name: Set Docker image tag
+        id: set_tag
+        run: |
+          if [[ "${{ github.event_name }}" == "release" ]]; then
+            echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          else
+            echo "tag=${{ github.sha }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Build Web Docker Image
         run: |
-          docker build . -t ghcr.io/${{ env.REPO }}:${{ github.sha }} -f web/CareLeavers.Web/Dockerfile
+          docker build . -t ghcr.io/${{ env.REPO }}:${{ steps.set_tag.outputs.tag }} -f web/CareLeavers.Web/Dockerfile
 
       - uses: docker/login-action@v3
         with:
@@ -50,17 +63,17 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push Web Docker Image
-        run: docker push ghcr.io/${{ env.REPO }}:${{ github.sha }}
+        run: docker push ghcr.io/${{ env.REPO }}:${{ steps.set_tag.outputs.tag }}
 
   deploy_environment:
-    name: Deploying site to ${{ github.event.inputs.environment }}
+    name: Deploying site to ${{ github.event.inputs.environment || 'Production' }}
     runs-on: ubuntu-latest
-    needs: [package]
+    needs: [ package ]
     permissions:
       contents: read
       id-token: write
     environment:
-      name: ${{ github.event.inputs.environment }}
+      name: ${{ github.event.inputs.environment || 'Production' }}
     env:
       ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
       ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
@@ -125,7 +138,7 @@ jobs:
           TF_VAR_pdf_generation_use_sandbox: ${{ vars.PDF_GENERATION_USE_SANDBOX }}
           TF_VAR_rebrand: ${{ vars.REBRAND }}
           TF_VAR_support_alert_email: ${{ secrets.SUPPORT_ALERT_EMAIL }}
-        
+
 
       - name: 'Terraform Apply'
         id: terraform_apply
@@ -141,7 +154,7 @@ jobs:
         with:
           app-name: s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service
           slot-name: 'staging'
-          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
+          images: 'ghcr.io/${{ env.REPO }}:${{ needs.package.outputs.image_tag }}'
 
       - name: Swap slot to production
         run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
@@ -153,7 +166,6 @@ jobs:
         id: clear-cache
         uses: fjogeleit/http-request-action@v1
         if: ${{ inputs.clear-cache == 'True' }}
-        with: 
+        with:
           url: 'https://${{ vars.CUSTOM_DOMAIN }}/b0e0dce2-b96d-4b94-a800-63c3ab56e72f'
           method: 'POST'
-        
