--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -11,6 +11,7 @@ on:
         options:
           - 'Test'
           - 'Staging'
+          - 'Production'
       clear-cache:
         type: choice
         description: 'Clear the cache?'
@@ -22,7 +23,7 @@ on:
   release:
     types: [ published ]
 
-run-name: Deploy to ${{ github.event.inputs.environment || 'Production' }}
+run-name: Deploy to ${{ github.event.inputs.environment || (github.event.release.prerelease && 'Test') || 'Production' }}
 
 jobs:
   package:
@@ -67,34 +68,29 @@ jobs:
       - name: Push Web Docker Image
         run: docker push ghcr.io/${{ env.REPO }}:${{ steps.set_tag.outputs.tag }}
 
-  deploy_environment:
-    # This name is dynamic and will update based on the determined environment
-    name: Deploying site to ${{ needs.package.outputs.environment || 'Production' }}
+  determine_environment:
+    name: Determine Environment
     runs-on: ubuntu-latest
-    needs: [ package ]
-    permissions:
-      contents: read
-      id-token: write
-    # The environment name is now set dynamically in a later step
-    environment:
-      name: ${{ steps.vars.outputs.environment }}
-    env:
-      ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
-      ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-      ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
-      ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
-
+    outputs:
+      environment: ${{ steps.vars.outputs.environment }}
+      clear_cache: ${{ steps.vars.outputs.clear_cache }}
     steps:
       - name: Set dynamic variables
         id: vars
         run: |
           if [[ "${{ github.event_name }}" == "release" ]]; then
-            echo "Triggered by release. Parsing release body for options."
+            echo "Triggered by release."
+            if [[ "${{ github.event.release.prerelease }}" == "true" ]]; then
+              echo "This is a pre-release. Setting environment to Test."
+              echo "environment=Test" >> $GITHUB_OUTPUT
+            else
+              echo "This is a full release. Setting environment to Production."
+              echo "environment=Production" >> $GITHUB_OUTPUT
+            fi
+          
+            # Keep the cache logic from the release body
             BODY="${{ github.event.release.body }}"
-            # Extract values, trim whitespace, and provide defaults
-            ENV_VALUE=$(echo "$BODY" | grep 'environment:' | awk -F': ' '{print $2}' | tr -d '[:space:]')
             CACHE_VALUE=$(echo "$BODY" | grep 'clear-cache:' | awk -F': ' '{print $2}' | tr -d '[:space:]')
-            echo "environment=${ENV_VALUE:-Production}" >> $GITHUB_OUTPUT
             echo "clear_cache=${CACHE_VALUE:-False}" >> $GITHUB_OUTPUT
           else
             echo "Triggered manually. Using workflow dispatch inputs."
@@ -102,10 +98,26 @@ jobs:
             echo "clear_cache=${{ github.event.inputs.clear-cache }}" >> $GITHUB_OUTPUT
           fi
 
+  deploy_environment:
+    name: Deploying site to ${{ needs.determine_environment.outputs.environment }}
+    runs-on: ubuntu-latest
+    needs: [ package, determine_environment ]
+    permissions:
+      contents: read
+      id-token: write
+    environment:
+      name: ${{ needs.determine_environment.outputs.environment }}
+    env:
+      ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+      ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+      ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
+      ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
+
+    steps:
       - name: Display Determined Variables
         run: |
-          echo "Deployment Environment: ${{ steps.vars.outputs.environment }}"
-          echo "Clear Cache: ${{ steps.vars.outputs.clear_cache }}"
+          echo "Deployment Environment: ${{ needs.determine_environment.outputs.environment }}"
+          echo "Clear Cache: ${{ needs.determine_environment.outputs.clear_cache }}"
 
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
@@ -145,8 +157,7 @@ jobs:
         working-directory: ./src/infrastructure/terraform
         run: terraform plan -out plan.plan
         env:
-          # MODIFIED: Uses the output from the 'vars' step
-          TF_VAR_aspnetcore_environment: ${{ steps.vars.outputs.environment }}
+          TF_VAR_aspnetcore_environment: ${{ needs.determine_environment.outputs.environment }}
           TF_VAR_environment_prefix: ${{ vars.ENVIRONMENT_PREFIX }}
           TF_VAR_cip_environment: ${{ vars.CIP_ENVIRONMENT }}
           TF_VAR_contentful_delivery_api_key: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
@@ -191,8 +202,7 @@ jobs:
       - name: Clear Cache
         id: clear-cache
         uses: fjogeleit/http-request-action@v1
-        # MODIFIED: Uses the output from the 'vars' step
-        if: ${{ steps.vars.outputs.clear_cache == 'True' }}
+        if: ${{ needs.determine_environment.outputs.clear_cache == 'True' }}
         with:
           url: 'https://${{ vars.CUSTOM_DOMAIN }}/b0e0dce2-b96d-4b94-a800-63c3ab56e72f'
           method: 'POST'
