--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -1,8 +1,7 @@
 name: Deploy - Environment
 
 on:
-  pull_request:
-    types: [ closed ]
+  push:
     branches:
       - main
   release:
@@ -27,11 +26,11 @@ on:
           - 'True'
           - 'False'
 
-run-name: Deploy to ${{ (github.event_name == 'release' && 'Production') || (github.event.pull_request.merged && 'Test') || github.event.inputs.environment }}
+run-name: Deploy to ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
 
 jobs:
   tag_release:
-    if: github.event.pull_request.merged == true
+    if: github.event_name == 'push'
     name: Create New Tag
     runs-on: ubuntu-latest
     outputs:
@@ -51,7 +50,7 @@ jobs:
     name: 'Package Web in Docker'
     runs-on: ubuntu-latest
     needs: [ tag_release ]
-    if: always() && (needs.tag_release.result == 'success' || github.event_name != 'pull_request')
+    if: always() && (needs.tag_release.result == 'success' || github.event_name != 'push')
     defaults:
       run:
         working-directory: ./src
@@ -73,7 +72,7 @@ jobs:
           if [[ "${{ github.event_name }}" == "release" ]]; then
             echo "Using release tag for versioning: ${{ github.ref_name }}"
             echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ github.event.pull_request.merged }}" == "true" ]]; then
+          elif [[ "${{ github.event_name }}" == "push" ]]; then
             echo "Using new auto-generated tag for versioning: ${{ needs.tag_release.outputs.new_tag }}"
             echo "tag=${{ needs.tag_release.outputs.new_tag }}" >> $GITHUB_OUTPUT
           else
@@ -95,15 +94,14 @@ jobs:
         run: docker push ghcr.io/${{ env.REPO }}:${{ steps.set_tag.outputs.tag }}
 
   deploy_environment:
-    name: Deploying site to ${{ (github.event_name == 'release' && 'Production') || (github.event.pull_request.merged && 'Test') || github.event.inputs.environment }}
+    name: Deploying site to ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
     runs-on: ubuntu-latest
     needs: [ package ]
-    if: github.event.pull_request.merged == true || github.event_name != 'pull_request'
     permissions:
       contents: read
       id-token: write
     environment:
-      name: ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'pull_request' && 'Test') || github.event.inputs.environment }}
+      name: ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
     env:
       ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
       ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
@@ -114,7 +112,7 @@ jobs:
       - name: Set dynamic variables
         id: vars
         run: |
-          ENV_NAME="${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'pull_request' && 'Test') || github.event.inputs.environment }}"
+          ENV_NAME="${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}"
           echo "ENV_NAME=$ENV_NAME" >> $GITHUB_ENV
           echo "Deployment Environment: $ENV_NAME"
 
@@ -123,7 +121,7 @@ jobs:
             CACHE_VALUE=$(echo "$BODY" | grep 'clear-cache:' | awk -F': ' '{print $2}' | tr -d '[:space:]')
             echo "clear_cache=${CACHE_VALUE:-False}" >> $GITHUB_OUTPUT
             echo "Clear Cache: ${CACHE_VALUE:-False}"
-          elif [[ "${{ github.event.pull_request.merged }}" == "true" ]]; then
+          elif [[ "${{ github.event_name }}" == "push" ]]; then
             echo "clear_cache=False" >> $GITHUB_OUTPUT
             echo "Clear Cache: False"
           else
