--- a/.github/workflows/validate-web.yaml
+++ b/.github/workflows/validate-web.yaml
@@ -1,11 +1,7 @@
 name: Validate - Web
 
 on:
-  push:
-    branches: [ "main" ]
-    paths:
-      - 'src/web/**'
-      - '.github/workflows/validate-web.yaml'
+  workflow_call:
   pull_request:
     branches: [ "main" ]
     paths:
