--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -29,10 +29,16 @@ on:
 run-name: Deploy to ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'push' && 'Test') || github.event.inputs.environment }}
 
 jobs:
+  validate_web:
+    if: github.event_name == 'push'
+    name: Validate Web
+    uses: ./.github/workflows/validate-web.yaml
+
   tag_release:
     if: github.event_name == 'push'
     name: Create New Tag
     runs-on: ubuntu-latest
+    needs: [ validate_web ]
     outputs:
       new_tag: ${{ steps.tag_version.outputs.new_tag }}
     steps:
